fix(styles): updates gap in topic-teaser

--- a/packages/styles/src/variables/components/_topic-teaser.scss
+++ b/packages/styles/src/variables/components/_topic-teaser.scss
@@ -10,7 +10,6 @@ $content-cols: (
 );
 
 $content-gap: (
-  xs: 10px,
   rg: 32px,
   xl: 40px,
 );
